--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="bg.o.sim.annawave">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
+        android:name=".ApplicationWrapper"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -21,7 +24,6 @@
         </activity>
         <activity
             android:name=".ui.DashboardActivity"
-            android:clearTaskOnLaunch="true"
             android:label="@string/title_activity_dashboard"
             android:theme="@style/AppTheme" />
     </application>
