--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
 
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.google.android:flexbox:1.1.0'
 
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
