--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,18 @@
 language: android
 
-sudo: true
+sudo: false
 
 android:
   components:
-    - tools
-    - platform-tools
-    - build-tools-28.0.3
-    - android-28
+  - build-tools-26.0.2
+  - android-26
+  - extra
 
 before_install:
   - chmod +x gradlew
 
 before_script:
-  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-26
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
