--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ android:
   - build-tools-26.0.2
   - android-26
   - extra
+  - sys-img-armeabi-v7a-android-26
 
 before_install:
   - chmod +x gradlew
