--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,13 @@ android:
   - build-tools-26.0.2
   - android-26
   - extra
-  - sys-img-armeabi-v7a-android-26
+  - sys-img-armeabi-v7a-addon-google_apis-google-26
 
 before_install:
   - chmod +x gradlew
 
 before_script:
-  - echo no | android create avd --force -n test -t android-26 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-26 --abi google_apis/armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
